--- a/style.css
+++ b/style.css
@@ -123,3 +123,11 @@
     width:50%
      text-align:center;
 }
+
+.DHref{
+    width: 25%;
+    margin:5px auto 0px auto;
+    font: 8px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight:bold;
+    text-align:center;
+}
