--- a/style.css
+++ b/style.css
@@ -131,3 +131,12 @@
     font-weight:bold;
     text-align:center;
 }
+
+.bottomRef{
+    position:absolute;
+    bottom: 20px;
+    width:50%;
+    max-width:500px;
+    font: 8px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: auto;
+}
