--- a/style.css
+++ b/style.css
@@ -133,10 +133,11 @@
 }
 
 .bottomRef{
-    position:absolute;
+    position:relative;
     bottom: 20px;
     width:50%;
     max-width:500px;
     font: 8px "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: auto;
+    text-align: center;
 }
